--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1,48 +1,62 @@
-*{
-    margin:0;
-    padding:0;
-    }
-    
-    .background{
-    background:url(bg.jpeg);
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.background {
+    background: url(https://static.wixstatic.com/media/fc7570_a267ead5738645e19121ce654cdd1b23~mv2.png/v1/fill/w_1676,h_684,al_c,q_90,enc_auto/fc7570_a267ead5738645e19121ce654cdd1b23~mv2.png);
     background-size: cover;
-    background-repeat:no repeat;
-    }
-    
-    .container-fluid{
-    margin-left: 0;
-    padding-left:0;
-    
-    }
-    
-    
-    h1{
-    margin-top:135px;
+    background-repeat: no-repeat;
+    background-color: #72366B;
+}
+
+.container-fluid {
+    width: 800px;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 5rem;
+}
+
+.neon {
+    color: #72366B;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 40px #0ff,
+    0 0 80px #0ff,
+    0 0 90px #0ff,
+    0 0 100px #0ff,
+    0 0 150px #0ff;
+  }
+
+
+h1 {
     text-align: center;
     font-size: 100px;
-    color:aqua;
-    }
-    h3{
+}
+
+h3 {
     text-align: center;
     font-size: 60px;
-    color:aqua;
-    }
-    
+}
 
-    .container-fluid a{
-    margin-left:33pc;
-    margin-right:33pc;
+
+.container-fluid a {
     display: flex;
     justify-content: center;
-    color:black;
+    color: #fff;
     text-decoration: none;
-    background: transparent;
     padding: 10px 35px;
-    border-radius: 50px;
-    }
-    
-    a:hover{
-    color:white;
-    border-color: blue;
-    background: blue;
-    }
+    border-radius: 10px;
+}
+
+a:hover {
+    color: white;
+    border:none;
+    background: #2b859b;
+}
